<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_fragment">Login</string>
    <string name="welcome_fragment">Welcome</string>
    <string name="brief">an App to apply skills in building layouts and navigation</string>
    <string name="welcome_msg">Welcome to Shoe Store</string>
    <string name="next">Next</string>
    <string name="instruction_fragment">Instructions</string>
    <string name="detail_fragment">Detail</string>
    <string name="shoe_list_fragment">Shoe List</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="email_hint">example@example.example</string>
    <string name="password_hint">secure passowrd</string>
    <string name="instruction_one">Add A New Shoe By Clicking On The Plus Button</string>
    <string name="instruction_two">You Can Check All Added Shoes In The Next Screen</string>
</resources>
