<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shoe_item"
        style="@style/card_style"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--I used here a LinearLayout because all views are aligned in a vertical manner,
         if more views (e.g image) are added I may change the layout to Constraint so I can have a vertical and horizontal manners  -->

        <LinearLayout
            android:id="@+id/shoeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/shoe_name_tv"
                android:text="@string/shoe_name" />

            <TextView
                android:id="@+id/shoe_name_tv"
                style="@style/detail_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{shoe.name}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/company_tv"
                android:text="@string/company" />

            <TextView
                android:id="@+id/company_tv"
                style="@style/detail_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{shoe.company}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/size_tv"
                android:text="@string/shoe_size" />

            <TextView
                android:id="@+id/size_tv"
                style="@style/detail_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(shoe.size)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/desc_tv"
                android:text="@string/description" />

            <TextView
                android:id="@+id/desc_tv"
                style="@style/detail_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{shoe.description}" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>